@@ -6,6 +6,8 @@ Fix in 1x1 GQs.
 
 Change in the syntax of the LatestAgeMortalityPattern column in vwBaseYear dataset.
 
+Argument pasfr.ignore.phase2 added to pop.predict.subnat.
+
 10.0-0/1 (08/09/2023)
 ------
 Making default datasets from wpp2022 work with pop.predict.
